trow.css
/*
 * Globals
 */

html,
body {
    height: 100%;
    font-family: 'route_159regular', Arial, sans-serif;
}
.row {
    padding: 1.8% 0;
}
.content{padding:0 15px;}

.blue-bg {
    background: #2841f9 url(bg-blueprint.png) fixed no-repeat top right;
    color: #fff;
    background-size: cover;

}

.blue-bg a {

    color: #fff;
}


.intro img{
    max-width: 60px;
}

.features {
    font-size: 20px;
}

.action {
    text-align: center;
}

.cover-container{

}

.cover-heading {
    font-family: 'route_159heavy', Arial, sans-serif;
    font-weight: 700;
    font-size: 52px;
    padding-top: 10px;
}

.feature-heading {
    font-family: 'route_159heavy', Arial, sans-serif;
    font-weight: 700;
    font-size: 36px;
    padding-top: 10px;
}
ul {
    padding:0;
}
ul ul {
    padding-left: 40px;
}
li{
    list-style: none;
}


li {
    padding-bottom: 30px;
    align-items: left;
    justify-content: left;
}

li span {
    vertical-align: middle;
    display: inline-block;
    width: 82%;
    line-height: 1.5;

}

li:before {
    content: '';
    display: inline-block;
    height: 25px;
    width: 25px;
    background: url(bullet.svg) no-repeat center center;
    vertical-align: middle;
    font-size: 20px;
    margin-right: 20px;
}

.features h2 {
    margin-bottom: 40px
}
.features {
    text-align: left;
    vertical-align: middle;
}

.features h2:after {
    content: "";
    display: block;
    background-color: #1DD5B2;
    position: absolute;
    width: 135px;
    height: 5px;
}

.btn-primary,
.btn-primary:hover,
.btn-primary:active,
.btn-primary:visited,
.btn-primary:focus {
    background-color: #ff16aa;
    border: none;
    text-decoration: none;
    border-radius: 0;
    padding: 10px 40px;
    margin-right: 5px;
}



.turq {
    color: #1ed6b3;
}

/*
 * Header
 */


.masthead-brand {
    margin-bottom: 0;
}

.nav-masthead .nav-link {
    padding: .25rem 0;
    font-weight: 700;
    background-color: transparent;
    border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
    border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
    margin-left: 1rem;
}

.nav-masthead .active {
    border-bottom-color: #fff;
}



.masthead img {
    max-height: 45px;
}

.rtest {
    float: right;
}

.clear {
    clear: both;
}

.uptest {
    float: left;
    padding-top: 15px;
}

@media {
    .masthead-brand {
        float: left;
    }

    .nav-masthead {
        float: right;
    }
}

hr.bar {
    height: 2px;
    color: #1DD5B2;
    background-color: #1DD5B2;
}
/*Tablet specifically*/



@media only screen and (max-width: 900px) {
    .h2, h2 {
        font-size: 1.9rem;
    }
    .row {
        padding: 1.3% 0;
        display: block;
    }
    .cover-heading {
        font-size: 45px;
        padding-top: 0;
    }
    .masthead{
        padding: 10px 0;
    }

    li {
        padding-bottom: 15px;
    }
    li span {
        font-size: 18px;
    }
    .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited, .btn-primary:focus {
        background-color: #ff16aa;
        border: none;
        text-decoration: none;
        border-radius: 0;
        padding: 16px 58px;
        margin: 5px;
    }
    .rtest,
    .uptest {
        float: none;
        text-align: center;
        width: 100%;
    }
    .lead {
        font-size: 1.15rem;
        font-weight: 300;
        margin: 10px 0;
    }
}


@media only screen and (max-width: 600px) {
    .row {
        padding: 10% 0;
    }
    .masthead{
        padding: 10px 0;
    }
    .masthead img {
        max-height: 32px;
    }
}

@media only screen and (min-width: 2400px) {
    footer {
        position: fixed;
        bottom:0;
        width: 100vw
    }
}

